--- a/recruit-parent/recruit-starter/pom.xml
+++ b/recruit-parent/recruit-starter/pom.xml
@@ -17,18 +17,9 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
+    <packaging>war</packaging>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
