--- a/recruit-parent/recruit-user/pom.xml
+++ b/recruit-parent/recruit-user/pom.xml
@@ -21,7 +21,7 @@
         <module>recruit-user-starter</module>
         <module>recruit-user-pro</module>
     </modules>
-
+    <packaging>pom</packaging>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
