--- a/recruit-parent/recruit-user/pom.xml
+++ b/recruit-parent/recruit-user/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>recruit-parent</artifactId>
         <groupId>com.recruit.wm</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <groupId>com.recruit.wm</groupId>
     <artifactId>recruit-user</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <name>recruit-user</name>
     <description>recruit-user</description>
 
@@ -23,25 +23,7 @@
     </modules>
     <packaging>pom</packaging>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
