--- a/recruit-parent/recruit-starter/src/main/resources/application-dev.properties
+++ b/recruit-parent/recruit-starter/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.name=root
+spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://47.110.71.90:3306/test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
