--- a/recruit-parent/recruit-user/recruit-user-pro/pom.xml
+++ b/recruit-parent/recruit-user/recruit-user-pro/pom.xml
@@ -5,38 +5,22 @@
     <parent>
         <artifactId>recruit-user</artifactId>
         <groupId>com.recruit.wm</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <groupId>com.recruit.wm</groupId>
     <artifactId>recruit-user-pro</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <name>recruit-user-pro</name>
     <description>recruit-user-pro</description>
 
+    <packaging>jar</packaging>
     <properties>
         <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
