--- a/recruit-parent/recruit-starter/src/main/resources/application-dev.properties
+++ b/recruit-parent/recruit-starter/src/main/resources/application-dev.properties
@@ -22,5 +22,14 @@ spring.datasource.druid.min-evictable-idle-time-millis=300000
 
 
 mybatis.mapper-locations=classpath:dao/*.xml
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-handlers-package=com.recruit.wm.handler
+
+swagger.enable=true
+
+spring.security.user.name=wangming
+spring.security.user.password=123456
+
 
 
