--- a/recruit-parent/recruit-user/recruit-user-pro/pom.xml
+++ b/recruit-parent/recruit-user/recruit-user-pro/pom.xml
@@ -19,8 +19,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.recruit.wm</groupId>
+            <artifactId>recruit-common</artifactId>
+            <version>${revision}</version>
+        </dependency>
     </dependencies>
-
 
 </project>
