--- a/security-parent/pom.xml
+++ b/security-parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.1</version>
+        <version>2.3.7.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.recruit.wm</groupId>
@@ -17,6 +17,7 @@
     <modules>
         <module>security01</module>
         <module>security02</module>
+        <module>oauth2</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
