--- a/security-parent/oauth2/pom.xml
+++ b/security-parent/oauth2/pom.xml
@@ -28,12 +28,21 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
     </dependencies>
 
-    <!-- spring cloud -->
+        <!-- spring cloud -->
     <dependencyManagement>
         <dependencies>
             <dependency>
